<resources>
    <string name="app_name">Assignment1</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="password1">Password:</string>
    <string name="age1">Age:</string>
    <string name="phone_no1">Phone No:</string>
    <string name="email1">Email:</string>
    <string name="name1">Name:</string>
</resources>