<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="23dp"
    android:background="#A95FC8"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="5dp"
        android:textAlignment="center"
        android:hint="@string/name"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:drawableStart="@drawable/ic_baseline_account_circle_24" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textAlignment="center"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email_24" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="5dp"
        android:maxLength="10"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_baseline_phone_24" />
    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_baseline_face_24"
        android:drawablePadding="5dp"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:drawableStart="@drawable/ic_baseline_face_24" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24" />

    <Button
        android:id="@+id/button"
        android:background="@drawable/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Submit" />


</LinearLayout>