<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C8DDD"
    tools:context=".SecondActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:layout_marginTop="26dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/> <TextView
            android:layout_width="wrap_content"
            android:id="@+id/t1"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:textAlignment="center"
        android:textSize="21sp"
        android:gravity="center_horizontal" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email1"
                android:layout_marginTop="26dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/t2"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:textAlignment="center"
                android:textSize="21sp"
                android:gravity="center_horizontal" />
<!--                android:text="vanshikasikarwar79@gmail.com"-->
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_no1"
                    android:layout_marginTop="26dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/t3"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:textSize="21sp"
                    />
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age1"
            android:layout_marginTop="26dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:id="@+id/t4"
            android:textAlignment="center"
            android:textSize="21sp"

            android:gravity="center_horizontal" />
    </LinearLayout><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password1"
            android:layout_marginTop="26dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/t5"
        android:textAlignment="center"
        android:textSize="21sp"
        android:gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>